rs_bindings_from_cc/test/golden/bridge_wrapping_alias_rs_api.rs
// Part of the Crubit project, under the Apache License v2.0 with LLVM
// Exceptions. See /LICENSE for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

// Automatically @generated Rust bindings for the following C++ target:
// //rs_bindings_from_cc/test/golden:bridge_wrapping_alias_cc

#![rustfmt::skip]
#![feature(custom_inner_attributes)]
#![allow(stable_features)]
#![allow(improper_ctypes)]
#![allow(nonstandard_style)]
#![allow(unused)]
#![allow(deprecated)]
#![deny(warnings)]

// error: class `TemplateType` could not be bound
//   Class templates are not yet supported

// error: type alias `AliasToInst` could not be bound
//   template instantiation is not yet supported

// error: class `Bridge` could not be bound
//   Class templates are not yet supported

// error: function `bridge_alias_to_inst` could not be bound
//   Type 'TemplateType < int >' has an error and cannot be bridged: template instantiation is not yet supported

// error: struct `TemplateType<int>` could not be bound
//   template instantiation is not yet supported
